Fix item alignment

--- a/resources/assets/less/bem/forum-post.less
+++ b/resources/assets/less/bem/forum-post.less
@@ -81,6 +81,7 @@
     &--header {
       padding-top: 10px;
       display: flex;
+      align-items: baseline;
 
       @media @desktop {
         padding-top: @_padding-content;
